# Azure

azure-container-app-python-terraform/: .dockerignore  .gitignore  Makefile  README.md
azure-container-app-python-terraform/app/: .dockerignore  Dockerfile  README.md
azure-container-app-python-terraform/infra/: .terraform.lock.hcl  main.tf  main.tfplan  output.tf  plan.out  providers.tf  variables.tf
azure-func-python-terraform/: .funcignore  .gitignore  Makefile  README.md  host.json  local.settings.example.json  pyproject.toml  requirements.in  requirements.txt
azure-func-python-terraform/.github/workflows/: ci.yml  deploy-function.yml  terraform-apply.yml  terraform-plan.yml
azure-func-python-terraform/infra/: README.md  backend.tf  main.tf  main.tfplan  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
azure-func-python-terraform/infra/modules/app_insights/: variables.tf
azure-func-python-terraform/infra/modules/function_app/: main.tf  outputs.tf  variables.tf
azure-func-python-terraform/infra/modules/key_vault/: main.tf
azure-func-python-terraform/infra/modules/storage_account/: main.tf  outputs.tf  variables.tf
azure-func-python-terraform/scripts/: create_venv.sh  init_terraform_backend.sh  run_locally.sh
azure-func-python-terraform/src/app/: config.py  function_app.py  logging_conf.py
azure-func-python-terraform/src/app/handlers/: hello.py
azure-func-python-terraform/src/app/schemas/: hello.py
azure-func-python-terraform/src/app/services/: greeting_service.py
azure-func-python-terraform/tests/: test_hello.py
(+2 files in other folders)
